samples/_failures_safe/1761553481_e5dede_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_91165f78.c: In function ‘main’:
./samples/SAFE/__tmp_91165f78.c:149:9: error: expected declaration or statement at end of input
  149 |         printf("4. Transpose Matrix B\n");
      |         ^~~~~~
./samples/SAFE/__tmp_91165f78.c:149:9: error: expected declaration or statement at end of input
